# pyquafu

./: .clang-format  .cmake-format.yaml  .cppcheck.suppressions  .gitignore  .gitlab-ci.yml  .pre-commit-config-format-gitee.yml  .pre-commit-config-format.yml  .pre-commit-config-gitee.yaml  .pre-commit-config.yaml  .whitelizard.txt  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CN.md  CPPLINT.cfg  INSTALL.md  INSTALL_cn.md  MANIFEST.in  NOTICE  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  build.bat  build.ps1  build.sh  build_locally.bat  build_locally.ps1  build_locally.sh  clean.sh  conftest.py  element_gates.py  install_with_docker.md  install_with_docker_en.md  mkdocs.yml  para_circuit.py  paulis.py  pyproject.toml  qiskit_transpiler.py  quantum_circuit.py  quantum_element.py  (+9 more)
.github/workflows/: ci.yml  commitlint.yml  pre-commit.yaml  unittest.yml  wheels.yml
_build/: backend.py  utils.py
ccsrc/: CMakeLists.txt
ccsrc/include/: CMakeLists.txt
ccsrc/lib/: CMakeLists.txt
ccsrc/lib/simulator/: CMakeLists.txt  timer.cpp  utils.cpp
ccsrc/lib/simulator/densitymatrix/detail/: CMakeLists.txt
ccsrc/lib/simulator/densitymatrix/detail/cpu_common/: CMakeLists.txt  cpu_densitymatrix_core_channel.cpp  cpu_densitymatrix_core_condition.cpp  cpu_densitymatrix_core_gate_expect.cpp  cpu_densitymatrix_core_matrix_gate.cpp  cpu_densitymatrix_core_other_gate.cpp  cpu_densitymatrix_core_policy.cpp  cpu_densitymatrix_core_rot_pauli.cpp  cpu_densitymatrix_core_swap_like.cpp  cpu_densitymatrix_core_utils.cpp  cpu_densitymatrix_core_x_like.cpp  cpu_densitymatrix_core_z_like.cpp
ccsrc/lib/simulator/stabilizer/: CMakeLists.txt  query_element.cpp  random_benchmarking.cpp  stabilizer.cpp
ccsrc/lib/simulator/vector/detail/: CMakeLists.txt
ccsrc/lib/simulator/vector/detail/cpu_avx_double/: CMakeLists.txt  cpu_vector_core_gate_expect.cpp  cpu_vector_core_matrix_gate.cpp
ccsrc/lib/simulator/vector/detail/cpu_common/: CMakeLists.txt  cpu_vector_core_condition.cpp  cpu_vector_core_dot_like.cpp  cpu_vector_core_gate_expect.cpp  cpu_vector_core_matrix_gate.cpp  cpu_vector_core_other_gate.cpp  cpu_vector_core_policy.cpp  cpu_vector_core_rot_pauli.cpp  cpu_vector_core_swap_like.cpp  cpu_vector_core_x_like.cpp  cpu_vector_core_z_like.cpp
ccsrc/lib/simulator/vector/detail/gpu/: CMakeLists.txt  gpu_vector_core_condition.cu  gpu_vector_core_dot_like.cu  gpu_vector_core_gate_expect.cu  gpu_vector_core_matrix_gate.cu  gpu_vector_core_other_gate.cu  gpu_vector_core_policy.cu  gpu_vector_core_rot_pauli.cu  gpu_vector_core_swap_like.cu  gpu_vector_core_x_like.cu  gpu_vector_core_z_like.cu
ccsrc/lib/simulator/vector/detail/runtime/: CMakeLists.txt  cmd.cpp  quafurt.cpp  utils.cpp
ccsrc/python/: CMakeLists.txt
ccsrc/python/quafubackend/: CMakeLists.txt
ccsrc/python/quafubackend/include/python/ops/: basic_gate.h  build_env.h
ccsrc/python/quafubackend/lib/: binding.cc  build_env.cpp  logging.cpp
ccsrc/python/simulator/: CMakeLists.txt
ccsrc/python/simulator/include/: CMakeLists.txt
ccsrc/python/simulator/include/python/densitymatrix/: bind_mat_state.h
ccsrc/python/simulator/include/python/vector/: bind_vec_state.h
ccsrc/python/simulator/lib/: _quafu_matrix.cpp  _quafu_vector.cpp  _quafu_vector_gpu.cu
cmake/: cmake_config.h.in  compiler_flags.cmake  compiler_test.cmake  install.cmake  lang20_config.h.in.in  linker_flags.cmake  macros.cmake  macros_more.cmake  mindspore_ci.cmake  options.cmake  os_detection.cmake  packages.cmake  quafuConfig.cmake.in
cmake/commands/: debug_print.cmake  quafu_config_macros.cmake  quafu_link_libraries.cmake
doc/: README.md  run.py
doc/source/: conf.py  index.rst  tutorial.rst  versions.json
docs/: CMakeLists.txt  Doxyfile  index.md  quafu_document.ipynb  scqkit_document.ipynb
docs/api_python/: overview.rst  quafu.algorithm.rst  quafu.core.rst  quafu.device.rst  quafu.dtype.rst  quafu.engine.rst  quafu.framework.rst  quafu.io.rst  quafu.simulator.rst  quafu.utils.rst
docs/api_python_en/: overview.rst  quafu.algorithm.rst  quafu.core.rst  quafu.device.rst  quafu.dtype.rst  quafu.engine.rst  quafu.framework.rst  quafu.io.rst  quafu.simulator.rst  quafu.utils.rst
docs/source/: api.rst  cmake_reference.rst  conf.py  index.rst  installation.rst  tutorial.md
example/: README.md
example/quantum-jpeg/: quantum-jpeg.ipynb
examples/quantum_rl/: Quantum RL with Quafu.ipynb
quafu/: __init__.py  __main__.py  requirements.txt
quafu/algorithms/: __init__.py  ansatz.py  estimator.py  gradient.py  hamiltonian.py  interface_provider.py  optimizer.py  sampler.py
quafu/backends/: __init__.py  backends.py
quafu/benchmark/: __init__.py  adder.py  deutsch_jozsa.py  unitary_test.py  variational_n4.py
quafu/circuits/: __init__.py  classical_register.py  quantum_circuit.py  quantum_register.py
quafu/config/: __init__.py  config.py
quafu/core/: __init__.py
quafu/dagcircuits/: __init__.py  circuit_dag.py  dag_circuit.py  instruction_node.py
quafu/device/: topology.py  vigo_property.py
quafu/dtype/: __init__.py  dtype.py
quafu/elements/: __init__.py  classical_element.py  instruction.py  noise.py  oracle.py  parameters.py  pulses.py  quantum_gate.py  utils.py
quafu/engine/: circuitengine.py
quafu/exceptions/: __init__.py  circuit_error.py  quafu_error.py  user_error.py  utils.py
quafu/framework/: __init__.py  layer.py  operations.py
quafu/io/: __init__.py  beauty_print.py
quafu/qfasm/: __init__.py  dev_qfasm.py  exceptions.py  lex.txt  parse.py  parser.out  parsetab.py  qasm.qasm  qe.inc  qelib1.inc  qfasm_convertor.py  qfasm_lexer.py  qfasm_parser.py  qfasm_utils.py  test.ipynb  test_lexer.py  test_parser.py
quafu/results/: __init__.py  results.py
quafu/tasks/: tasks.py  (+1 more)
quafu_config/: __init__.py  __main__.py
scripts/: generate_vscode_snippets.py  macos_delocate.sh
site/: 404.html  index.html  objects.inv  quafu_document.ipynb  scqkit_document.ipynb  sitemap.xml
src/: mkdocs.yml  test.py
test/: openqasm_qlisp.py  qiskit_transpiler.py  test.py
tests/: quick_test.py
transpiler/: Qcovercompiler.py  optsequence.py
(+901 files in other folders)
