[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel.windows]
archs = ["AMD64"]


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --plat manylinux2014_x86_64"
archs = ["x86_64"]


[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET = "13.6"}
archs = ["x86_64", "arm64"]

repair-wheel-command = [
  "delocate-listdeps {wheel}",
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]
